create contact button added

--- a/src/components/ControlBar/ControlBar.scss
+++ b/src/components/ControlBar/ControlBar.scss
@@ -4,3 +4,8 @@
     width: 100%;
     border-bottom: 1px solid lightgray;
 }
+
+.btn-danger {
+  background-color:teal !important;
+  border-color: teal !important;
+}
