working on form...

--- a/src/components/ControlBar/ControlBar.scss
+++ b/src/components/ControlBar/ControlBar.scss
@@ -5,7 +5,7 @@
     border-bottom: 1px solid lightgray;
 }
 
-.btn-danger {
+.btn-success {
   background-color:teal !important;
   border-color: teal !important;
 }
