Added edit button and applied few adjustments in layout

--- a/src/components/NewContactForm/NewContactForm.scss
+++ b/src/components/NewContactForm/NewContactForm.scss
@@ -2,3 +2,11 @@
   background-color:teal !important;
   border-color: teal !important;
 }
+
+.control-bar-container{
+  background-color: #fff;
+    height: 10vh;
+    width: 100%;
+    border-bottom: 1px solid lightgray;
+}
+
