--- a/src/components/ContactItem/ContactItem.scss
+++ b/src/components/ContactItem/ContactItem.scss
@@ -1,17 +1,37 @@
-.contact-card{
-  width:400px;
+.flip-card {
+  background-color: transparent;
+  width: 350px;
+  height: 200px;
+  perspective: 1000px;
+  margin: 3px;
+}
+
+.flip-card-inner {
   position: relative;
-}
-
-.del-btn{
-  position: absolute;
-  bottom:6px;
-  left:355px;
-}
-
-.edit-btn {
-    position: absolute;
-    bottom:6px;
-    left:320px;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
   
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  padding: 5%;
+}
+
+.flip-card-front {
+  background-color: #eceff1;
+}
+
+.flip-card-back {
+  background-color: #b0bec5;
+  transform: rotateY(180deg);
 }
