working on payment 1

--- a/src/components/MyNavar/MyNavbar.scss
+++ b/src/components/MyNavar/MyNavbar.scss
@@ -1,8 +1,6 @@
 .navbar{
 height: 10vh;
-  background-color: #70A1FF;
+  background-color: #fff;
+  border-bottom: 1px solid lightgray;
 }
-.navbar-brand,
-.nav-link{
-  color:#fff;
-}
+
