--- a/src/components/ContactsList/ContactsList.scss
+++ b/src/components/ContactsList/ContactsList.scss
@@ -1,5 +1,5 @@
 .contacts-list-container{
-  background-color: #fff;
+  background-color: #f1f2f6;
   scroll-behavior: smooth;
   overflow-y: auto;
   height: 80vh;
