logo picture added

--- a/src/components/MyNavar/MyNavbar.scss
+++ b/src/components/MyNavar/MyNavbar.scss
@@ -1,6 +1,10 @@
 .navbar{
-height: 10vh;
+height: 15vh;
   background-color: #fff;
   border-bottom: 1px solid lightgray;
 }
 
+img{
+  max-width:100px;
+  margin-left: 30px;
+}
