--- a/src/components/MyNavar/MyNavbar.scss
+++ b/src/components/MyNavar/MyNavbar.scss
@@ -4,7 +4,24 @@ height: 15vh;
   border-bottom: 1px solid lightgray;
 }
 
+.navbar-brand{
+  max-width:80px;
+}
+
 img{
-  max-width:100px;
+  max-width:130px;
   margin-left: 30px;
+}
+
+.user-photo {
+  border-radius: 50%;
+}
+
+.welcome{
+  color: gray;
+  font-size: 0.8em;
+}
+
+.nav-link{
+  font-size: 1.2em;
 }
